<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gerenciador de Estudos</string>
    <string name="titulo_secao_materia">Matérias</string>
    <string name="titulo_secao_add_materia">Adicionar Materia</string>
    <string name="titulo_secao_add_aula">Adicionar Aula</string>
    <string name="titulo_secao_add_prova">Adicionar Prova</string>
    <string name="titulo_secao_calendario">Calendário de Provas</string>
    <string name="titulo_secao_cards">Cards</string>
    <string name="titulo_secao_graph">Gráficos</string>
    <string name="titulo_secao_provas">Provas</string>
    <string name="titulo_secao_trabalhos">Trabalhos</string>
    <string name="titulo_secao_add_trabalho">Adicionar Trabalho</string>
    <string name="menu_set_nota">Colocar a nota</string>
    <string name="menu_delete">Excluir</string>
    <string name="menu_update">Editar</string>
    <string name="action_add">+</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Aulas</string>
    <string name="title_section3">Horário</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="descricao">Descrição</string>
    <string name="confirmar">Confirmar</string>
    <string name="duracao">Duração em minutos</string>
    <string name="materia">Matéria</string>
    <string name="inicio">Início</string>
    <string name="conteudo">Conteúdo</string>
    <string name="formula">Fórmula para o cálculo da média</string>
    <string name="variavel">Variável</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="overflow">Menu Overflow</string>
    <string name="color_stripe">Color Stripe</string>
    <string name="nota">Nota</string>
    <string name="cor_dialog">Escolher a cor</string>
    <string name="cor">Cor</string>
    <string name="assunto">Assunto</string>
    <string name="data_entrega">Data de Entrega</string>
    <string name="imagens">Imagens</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="checklist">Checklists</string>
    <string name="signup_title">Create new account</string>
    <string name="login_label">Log in</string>
    <string name="label">GDE</string>

</resources>
